--- a/src/main/resources/templates/content/user/bookSearch.html
+++ b/src/main/resources/templates/content/user/bookSearch.html
@@ -20,7 +20,8 @@
         <div class="container">
             <h2 class="mb-3 mt-3 text-center">검색결과</h2>
             <!-- 검색 결과 표 -->
-            <table class="mb-3 mt-3 text-center">
+            <div class="table-responsive">
+                <table class="table mb-3 mt-3 text-center" style="width: 100%; max-width: 100%;">
                 <tr>
                     <th>이미지</th>
                     <th>ISBN</th>
@@ -51,6 +52,7 @@
                     </td>
                 </tr>
             </table>
+            </div>
         </div>
         </main>
     </div>
