--- a/src/main/resources/templates/content/user/bookSearch.html
+++ b/src/main/resources/templates/content/user/bookSearch.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>book::search:result</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href=".static/css/App.css">
 </head>
 <body>
 <!-- header -->
@@ -32,14 +31,14 @@
                     <th>선택</th>
                 </tr>
                 <tr th:each="book : ${books}">
-                    <td><img th:src="${book.image}" id="image" th:alt="${book.image}" width="100"></td>
+                    <td><img th:src="${book.image}" th:id="image" th:alt="${book.image}" width="100"></td>
                     <td th:text="${book.isbn}" th:id="isbn" ></td>
                     <td><a th:text="${book.title}" th:name="title"></a></td>
                     <td th:text="${book.author}" th:name="author"></td>
                     <td th:text="${book.publisher}" th:name="publisher"></td>
                     <td th:text="${book.pubdate}" th:name="pubdate"></td>
                     <td>
-                        <form th:action="@{/board/bookSearch}" th:object="${NewBoardBookDTO}" th:method="post">
+                        <form th:action="@{/board/bookSearch}" th:object="${books}" th:method="post">
                         <button type="submit" class="btn btn-dark mx-1">선택</button>
                         <input type="hidden" name="title" th:value="${book.title}" />
                         <input type="hidden" name="isbn" th:value="${book.isbn}" />
