--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,32 +9,38 @@
 <body class="gradient-custom" style="background-color: #E2ECE2;">
 <section class="d-flex vh-100">
   <div class="container-fluid row justify-content-center align-content-center">
-    <div class="card bg-dark" style="border-radius: 1rem;">
-      <div class="card-body p-5 text-center">
-        <h2 class="text-white">LOGIN</h2>
-        <p class="text-white-50 mt-2 mb-3">서비스를 사용하려면 로그인을 해주세요</p>
+    <div class="card" style="border-radius: 1rem; background-color: white;">
+      <div class="card-body p-3 text-center">
+        <h2 class="mt-3">LOGIN</h2>
+        <p class="mt-2 mb-2">서비스를 사용하려면 로그인을 해주세요</p>
+        <hr>
         <div class = "mb-2">
           <form action="/user/login" method="POST">
             <input type="hidden" th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" />
-            <div class="mb-3">
-              <label class="form-label text-white">Email</label>
-              <input type="email" class="form-control" name="username">
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label text-left ">Email :</label>
+              <div class="col-sm-8">
+                <input type="email" class="form-control" name="username">
+              </div>
             </div>
-            <div class="mb-3">
-              <label class="form-label text-white">Password</label>
-              <input type="password" class="form-control" name="password">
+            <div class="form-group row">
+              <label class="col-sm-4 col-form-label text-left ">Password :</label>
+              <div class="col-sm-8">
+                <input type="password" class="form-control" name="password">
+              </div>
             </div>
-            <button type="submit" class="btn btn-secondary">로그인</button>
+            <button type="submit" class="btn btn-dark">로그인</button>
           </form>
+
+          <hr>
+
           <div class="d-flex justify-content-between mt-3">
-            <a href="/user/signup" class="text-white" style="text-decoration: underline;">회원가입</a>
-            <a href="https://kauth.kakao.com/oauth/authorize?client_id=f284189e44088e0bbdc67af1bf46cc1b
-&redirect_uri=http://localhost:8099/login/oauth2/code/kakao&response_type=code
-" className="text-warning mt-3 d-block" style="text-decoration: underline; color: #ffc107;">
+            <a href="/user/signup" style="text-decoration: underline; color: black;">회원가입</a>
+            <a href="/oauth2/authorization/kakao" className="text-warning mt-3 d-block" style="text-decoration: underline; color: #ffc107;">
              카카오 로그인 <img th:src="@{/images/kakao.png}" alt="Kakao Logo" style="height: 24px; margin-right: 8px;"></a>
           </div>
           <div class="d-flex mt-3">
-            <a href="" class="text-white" style="text-decoration: underline;">아이디/패스워찾기</a>
+            <a href="/user/find/idPw" style="text-decoration: underline; color: black;">아이디/패스워드찾기</a>
           </div>
         </div>
       </div>
