--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -13,7 +13,7 @@
     <div class="card " style="border-radius: 1rem;">
       <div class="card-body p-5 text-center">
         <h2>SIGN UP</h2>
-        <p class="mt-2 mb-2">서비스 사용을 위한 회원 가입</p>
+       <p class="mt-2 mb-2">서비스 사용을 위한 회원 가입</p>
 
         <div class = "mb-2">
           <form th:action="@{/user/signup}" method="POST">
@@ -86,7 +86,7 @@
             <div class="form-group row">
               <label for="phone" class="col-sm-3 col-form-label text-nowrap">핸드폰번호: <span class="text-danger">*</span></label>
               <div class="col-sm-9">
-                <input type="tel" class="form-control" id="phone" name="phone" placeholder="전화번호는 '-'를 제외하고 11자">
+                <input type="tel" class="form-control" id="phone" name="phone" placeholder="'-'를 제외하고 11자">
               </div>
             </div>
             <div class="form-group row">
