--- a/src/main/resources/templates/content/board/takeBook.html
+++ b/src/main/resources/templates/content/board/takeBook.html
@@ -31,7 +31,7 @@
         <header th:replace="~{/sidebar/sidebar :: sidebarFragment}"></header>
 
         <!-- Main -->
-        <main role="main" class="col-md-9 col-lg-10 px-md-4" style="margin-left: 200px">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="height: auto; min-height: 100%; margin-left: 200px; margin-bottom: 40px;">
             <br>
             <h3 style="font-weight: bold;">주문 도서 정보</h3>
             <hr>
