--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -1,16 +1,18 @@
 <header th:fragment="headerFragment" style="background-color: #E2ECE2">
     <nav class="navbar navbar-expand-lg navbar-light justify-content-between pt-3">
         <div class = "logo ml-3">
-        <a class="logo" th:href="@{/main/}"><img th:src="@{/images/logo.png}" alt="Logo" width="60px" height="60px"></a>
+            <a class="logo" th:href="@{/main/}"><img th:src="@{/images/logo.png}" alt="Logo" width="60px" height="60px"></a>
         </div>
 
         <h1 class="font-weight-bold">
             eco-reading
         </h1>
-                <div>
-                <a class="navbar-brand" href="#"><img th:src="@{/images/bookmark.png}" alt="Points" width="30px" height="30px"></a>
-                <a class="navbar-brand" href="#"><img th:src="@{/images/alarm.png}" alt="Alarm" width="30px" height="30px"></a>
-                <a class="navbar-brand" href="#"><img th:src="@{/images/user.png}" alt="User" width="30px" height="30px"></a>
-                </div>
-            </nav>
+        <nav>
+        <div>
+            <a class="navbar-brand" href="#"><img th:src="@{/images/bookmark.png}" alt="Points" width="30px" height="30px"></a>
+            <a class="navbar-brand" href="#"><img th:src="@{/images/alarm.png}" alt="Alarm" width="30px" height="30px"></a>
+            <a class="navbar-brand" href="#"><img th:src="@{/images/user.png}" alt="User" width="30px" height="30px"></a>
+        </div>
+        </nav>
+    </nav>
 </header>
